--- a/templates/store/category.html
+++ b/templates/store/category.html
@@ -5,27 +5,13 @@
 
 {%block content%}
 <main>
-
-    <!-- <section class="py-5 text-center container">
-      <div class="row py-lg-5">
-        <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="h1 fw-bold">Search, Read, Buy, Review</h1>
-          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator,
-            etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-          <p>
-            <a href="#" class="btn btn-primary my-2">Make an account</a>
-          </p>
-        </div>
-      </div>
-    </section> -->
-  
     <div class="album py-5 bg-light">
       <div class="container">
   
         <div class="pb-3 h5">{{category.name|title}}</div>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
 
-          {% for product in products %}
+          {% for product in page_obj %}
   
           <div class="col">
             <div class="card shadow-sm">
@@ -47,6 +33,27 @@
     </div>
   
   
-  </main>
+</main>
+
+<!--page number-->
+<nav aria-label="...">
+  <ul class="pagination ">
+    {% if page_obj.has_previous %}
+    <li class="page-item ">
+      <a class="page-link" href="?page={{page_obj.previous_page_number}}" tabindex="-1">Previous</a>
+    </li>
+    {% endif %}
+
+    <li class="page-item"><a class="page-link" href="">Page: {{ page_obj.number }}</a></li>
+    
+    {% if page_obj.has_next %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+      <!-- <a class="page-link" href="?page={{ page_obj.paginator.num_page }}">Last &raquo;</a> -->
+    </li>
+    {%endif%}
+  </ul>
+</nav>
+
   
 {%endblock%} 
