--- a/templates/store/base.html
+++ b/templates/store/base.html
@@ -14,58 +14,23 @@
   </head>
   
   <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Estore</a>
 
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-
-                  <li class="nav-item dropdown">
-
-                    <a class="nav-link dropdown-toggle" href="#" role="button" id="navbarDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                      Library
-                    </a>
-
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href=" ">All</a></li>
-                        {% for c in categories %}
-                        <li {% if category.slug == c.slug %}class="selected" {% endif %}>
-                            <a class="dropdown-item" href="{{ c.get_absolute_url }}">{{ c.name|title }}</a>
-                        </li>
-                        {% endfor %}
-                    </ul>
-
-                  </li>
-
-                </ul>
-
-                <form class="d-flex" >
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-
-              </div>
-
-            </div>
-          </nav>
-          
-    </header>
+    {% include './navbar.html' %}
+    
+    {% comment %} for flash messages {% endcomment %}
+    {% if messages %}
+    <ul class="messages">
+      {% for message in messages %}
+      <li>
+        {% comment %} {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %} {% endcomment %}
+        {{ message }}
+      </li>
+      {% endfor %}
+    </ul>
+    {% endif %}
 
 
+    {% comment %} For the body of the page {% endcomment %}
     <div id ="content">{%block content %} {% endblock %}</div>
   
 
