--- a/templates/e_book/navbar.html
+++ b/templates/e_book/navbar.html
@@ -1,3 +1,4 @@
+{%load static %}
 <header>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
@@ -42,12 +43,19 @@
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
             <ul>
+
+            </ul>
+            <a href="{% url 'store:cart' %}">
+              <img  id="cart-icon" src="{% static 'pic/cart.png' %}" width="20px">
+            </a>
+            <ul>
+
               {% if request.user.is_authenticated%}
               <!-- For Logout -->
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'signout_page' %}">Logout</a>
               </li>
-
+              
               {%else%}
               <!-- For Login -->
               <li class="nav-item">
