--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -1,12 +1,12 @@
-{% extends 'store/main.html' %}
+{% extends 'e_book/base.html' %}
 {% load static %}
 {% block content %}
 <div class="row">
-     <div class="col-lg-6">
+     <div class="col-lg-5">
           <div class="box-element" id="form-wrapper">
                <form id="form">
                     {% csrf_token %}
-                    <dSiv id="user-info">
+                    <div id="user-info">
                          <div class="form-field">
                               <input required class="form-control" type="text" name="name" placeholder="Name..">
                          </div>
@@ -37,6 +37,7 @@
                     </div>
 
                     <hr>
+                    <!--this gives continue button-->
                     <input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue">
                </form>
           </div>
@@ -50,16 +51,16 @@
           
      </div>
 
-     <div class="col-lg-6">
+     <div class="col-lg-5">
           <div class="box-element">
-               <a  class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Back to Cart</a>
+               <a  class="btn btn-outline-dark" href="{% url 'store:cart' %}">&#x2190; Back to Cart</a>
                <hr>
                <h3>Order Summary</h3>
                <hr>
                {% for item in items %}
                <div class="cart-row">
-                    <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
-                    <div style="flex:2"><p>{{item.product.name}}</p></div>
+                    <div style="flex:2"><img class="row-image" src="{{item.product.image.url}}"></div>
+                    <div style="flex:2"><p>{{item.product.title}}</p></div>
                     <div style="flex:1"><p>${{item.product.price|floatformat:2}}</p></div>
                     <div style="flex:1"><p>x{{item.quantity}}</p></div>
                </div>
@@ -77,6 +78,7 @@
      var total = '{{ order.get_cart_total|floatformat:2}}'
 
      if (shipping == 'False'){
+          //this is for items in which shipping is not needed like books
            document.getElementById('shipping-info').innerHTML = ''
      }
 
@@ -86,16 +88,18 @@
 
      if (shipping == 'False' && user != 'AnonymousUser'){
           //Hide entire form if user is logged in and shipping is false
-               document.getElementById('form-wrapper').classList.add("hidden");
-               //Show payment if logged in user wants to buy an item that does not require shipping
-              document.getElementById('payment-info').classList.remove("hidden");
+          document.getElementById('form-wrapper').classList.add("hidden");
+          //Show payment if logged in user wants to buy an item that does not require shipping
+          document.getElementById('payment-info').classList.remove("hidden");
      }
 
      var form = document.getElementById('form')
      form.addEventListener('submit', function(e){
          e.preventDefault()
          console.log('Form Submitted...') 
+         //hide the button after subimitting the form or after clicking continue button form .classList.add("hidden")
          document.getElementById('form-button').classList.add("hidden");
+         //here .classList.remove("hidden")  removes the hidden effect of payment option
          document.getElementById('payment-info').classList.remove("hidden");
     })
 
@@ -105,7 +109,7 @@
     })
     
 
-  function submitFormData(){//this function is call when we click make payment button
+     function submitFormData(){//this function is call when we click make payment button
          console.log('Payment button clicked')
 
           var userFormData = {
@@ -126,18 +130,19 @@
               shippingInfo.city = form.city.value
               shippingInfo.state = form.state.value
               shippingInfo.zipcode = form.zipcode.value
-         }
+          }
+          
+     
+     //     if (user == 'AnonymousUser'){
+     //         userFormData.name = form.name.value
+     //         userFormData.email = form.email.value
+     //     }
 
-         if (user == 'AnonymousUser'){
-              userFormData.name = form.name.value
-              userFormData.email = form.email.value
-         }
+     //     console.log('Shipping Info:', shippingInfo)
+     //     console.log('User Info:', userFormData)
 
-         {% comment %} console.log('Shipping Info:', shippingInfo)
-         console.log('User Info:', userFormData) {% endcomment %}
-
-         var url = "/process_order/"
-         fetch(url, {
+          var url = "/process-order/"//here url is from store app urp.py 
+          fetch(url, {
               method:'POST',
               headers:{
                    'Content-Type':'applicaiton/json',
@@ -145,18 +150,18 @@
               }, 
               body:JSON.stringify({'form':userFormData, 'shipping':shippingInfo}),
               
-         })
-         .then((response) => response.json())
-         .then((data) => {
+          })
+          .then((response) => response.json())
+          .then((data) => {
                console.log('Success:', data);
                alert('Transaction completed');  
 
-               cart = {}
-               document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
+               //cart = {}
+               //document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/" 
 
-               window.location.href = "{% url 'store' %}"
+               window.location.href = "{% url 'store:items' %}"
 
-               })
-    }
+          })
+     }
 </script>
 {% endblock content %}
