--- a/store/templates/store/detail.html
+++ b/store/templates/store/detail.html
@@ -37,9 +37,13 @@
 
                             </div>
                             <div class="col-6 text-end">
-                                <button data-product = "{{product.id}}" data-action = "add" type="button" class="btn btn-secondary btn-sm add-btn update-cart ">
-                                    Add to basket <!--'data-action = "add"' for when we click the button product is added to the cart  -->
-                                </button>
+                                <a href="{% url 'store:cart' %}">
+                                    <button data-product = "{{product.id}}" data-action = "add" type="button" class="btn btn-secondary btn-sm add-btn update-cart ">
+                                        Add to basket <!--'data-action = "add"' for when we click the button product is added to the cart  -->
+                                    </button>
+                                </a>    
+                                <a  class="btn btn-outline-dark" href="{% url 'store:checkout' %}">Buy Now</a>
+
                             </div>
                         </div>
                     </div>
