added multi user and made some change in html path

--- a/auth_users/templates/auth_users/signin.html
+++ b/auth_users/templates/auth_users/signin.html
@@ -1,4 +1,4 @@
-{%extends 'e_book/base.html'%}
+{%extends 'base.html'%}
 {% load static %}
 {%block title %}Signin{%endblock%}
 
@@ -22,7 +22,7 @@
                   <input type="password" name = "password" placeholder =" password" class="form-control form-control-lg" />
                   <label class="form-label" >Password</label>
                 </div>
-                <p>Do not have a accoun? <a href="{%url 'register' %}">Register Here</a></p>
+                <p>Do not have a accoun? <a href="{%url 'auth_users:register' %}">Register Here</a></p>
                 <!-- Checkbox -->
                 <div class="form-check d-flex justify-content-start mb-4">
                   <input class="form-check-input" type="checkbox" value="" />
