--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -52,15 +52,20 @@
             <ul>
 
               {% if request.user.is_authenticated%}
+              
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'auth_users:dashboard' %}">dashboard</a>
+              </li>
+              
               <!-- For Logout -->
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'signout_page' %}">Logout</a>
+                <a class="nav-link" href="{% url 'auth_users:signout_page' %}">Logout</a>
               </li>
               
               {%else%}
               <!-- For Login -->
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'signin_page'%}">Login</a>
+                <a class="nav-link" href="{% url 'auth_users:signin_page'%}">Login</a>
               {% endif %}
             </ul>
           </div>
