--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -5,7 +5,7 @@
 
 {%block content%}
 <main>
-    <div class="album py-5 bg-light">
+    {% comment %} <div class="album py-5 bg-light"> {% endcomment %}
       <div class="container">
   
         <div class="pb-3 h5">All Books
@@ -39,29 +39,11 @@
   
         </div>
       </div>
-    </div>
-  
-  
+      
+    {% comment %} </div> {% endcomment %}
+    {% include "./pagnination.html"%}
+
   </main>
 
-  <!--page number-->
-  <nav aria-label="...">
-    <ul class="pagination ">
-      {% if page_obj.has_previous %}
-      <li class="page-item ">
-        <a class="page-link" href="?page={{page_obj.previous_page_number}}" tabindex="-1">Previous</a>
-      </li>
-      {% endif %}
-
-      <li class="page-item"><a class="page-link" href="">Page: {{ page_obj.number }}</a></li>
-      
-      {% if page_obj.has_next %}
-      <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
-        <!-- <a class="page-link" href="?page={{ page_obj.paginator.num_page }}">Last &raquo;</a> -->
-      </li>
-      {%endif%}
-    </ul>
-  </nav>
 
 {%endblock%} 
