--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    <link href="{% static 'css/main.css'%}" rel="stylesheet" type="text/css" >
 
     <script type="text/javascript">
       var user = '{{request.user}}';
@@ -37,7 +37,7 @@
     
   </head>
   
-  <body>
+  <body >
 
     {% include './navbar.html' %}
     
@@ -55,7 +55,11 @@
 
 
     {% comment %} For the body of the page {% endcomment %}
-    <div id ="content">{%block content %} {% endblock %}</div>
+    <div id ="content">
+      {%block content %} 
+      
+      {% endblock %}
+    </div>
   
 
     <!-- Footer -->
