--- a/staticFiles/css/main.css
+++ b/staticFiles/css/main.css
@@ -1,4 +1,6 @@
-
+body{
+	background-color:greenyellow;
+}
 .box-element{
 	box-shadow:hsl(0, 0%, 80%) 0 0 16px;
 	background-color: #fff;
@@ -23,9 +25,9 @@
 }
 
 #cart-icon{
-	width:15px;
+	width:30px;
 	display: inline-block;
-	margin-left: 10px;
+	margin-left: 5px;
 }
 
 #cart-total{
