forgot password in signin page

--- a/auth_users/templates/auth_users/register.html
+++ b/auth_users/templates/auth_users/register.html
@@ -28,7 +28,7 @@
              </table>  
          </form> 
          <p>already signed up yet?</p>
-         <a href = "{% url 'signin_page' %}" >Login</a>
+         <a href = "{% url 'auth_users:signin_page' %}" >Login</a>
      </div>  
   
 {% endblock content %}  
