--- a/auth_users/templates/auth_users/signin.html
+++ b/auth_users/templates/auth_users/signin.html
@@ -25,8 +25,8 @@
                 <p>Do not have a accoun? <a href="{%url 'auth_users:register' %}">Register Here</a></p>
                 <!-- Checkbox -->
                 <div class="form-check d-flex justify-content-start mb-4">
-                  <input class="form-check-input" type="checkbox" value="" />
-                  <label class="form-check-label" > Remember password </label>
+                  
+                  <label class="form-check-label" > <a href="{% url 'auth_users:password_reset'%}">Forgor Password</a> </label>
                 </div> 
     
                 <button class="btn btn-primary btn-lg btn-block" type="submit" value ="login">Login</button>
