--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,8 @@
 {%load static %}
+
+<link href="{% static 'css/main.css'%}" rel="stylesheet" type="text/css" >
+  
+
 <header>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
@@ -49,25 +53,36 @@
               <img  id="cart-icon" src="{% static 'pic/cart.png' %}" >
             </a>
             <p id="cart-total" >{{cartItems}}</p>
-            <ul>
+            
+            {% if request.user.is_authenticated%}
+                <div class = "nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" id="navbarDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                    Account
+                  </a>
+                
+                  <ul class = "dropdown-menu" aria-labelledby = "navbarDropdown">
+                    <li class="nav-item">
+                      <a class="nav-link" href="{% url 'auth_users:dashboard' %}">Dashboard</a>
+                    </li>
 
-              {% if request.user.is_authenticated%}
+                    <li class="nav-item">
+                      <a class="nav-link" href="{% url 'auth_users:profile' %}">Profile</a>
+                    </li>
+
+                  <!-- For Logout -->
+                    <li class="nav-item">
+                      <a class="nav-link" href="{% url 'auth_users:signout_page' %}">Logout</a>
+                    </li>
+                  </ul> 
+                </div>
+                {%else%}
+                <!-- For Login -->
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'auth_users:signin_page'%}">Login</a>
+                {% endif %}
               
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'auth_users:dashboard' %}">dashboard</a>
-              </li>
-              
-              <!-- For Logout -->
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'auth_users:signout_page' %}">Logout</a>
-              </li>
-              
-              {%else%}
-              <!-- For Login -->
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'auth_users:signin_page'%}">Login</a>
-              {% endif %}
-            </ul>
+            
+            
           </div>
 
         </div>
